# logging-mp

./: README.md  README_zh-CN.md  pyproject.toml
example/: example.py
src/logging_mp/: __init__.py
