[project]
name = "logging-mp"
version = "0.2.1"
description = "A multiprocessing-safe logging system with Rich support."
authors = [
    { name = "silencht", email = "silencht@qq.com" }
]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "rich>=13.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]
[project.urls]
Homepage = "https://github.com/silencht/logging-mp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"